force-app/main/default/objects/Attendee__c/Attendee__c.object-meta.xml
<CustomObject>
    <label>Attendee</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>