force-app/main/default/objects/Attendee__c/fields/Attendee_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Full_Name__c</fullName>
    <formula>Attendee__r.FirstName &amp; &apos; &apos; &amp;  Attendee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Full Name</label>
    <type>Text</type>
</CustomField>