force-app/main/default/objects/Attendee__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - 50</fullName>
            </value>
            <value>
                <fullName>50 - 100</fullName>
            </value>
            <value>
                <fullName>100 -  200</fullName>
            </value>
            <value>
                <fullName>200 - 500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>