force-app/main/default/objects/Attendee__c/fields/Dubai_Dreamin_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Dubai_Dreamin_QR_Code__c</fullName>
    <formula>IMAGE(&apos;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=https://cloud-1-d--dubai.sandbox.my.site.com/dubaidreamin/s/ticket-confirmed?attendee=ID&apos;,&apos;Scan QR Code to check your ticket&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dubai Dreamin QR Code</label>
    <type>Text</type>
</CustomField>