force-app/main/default/objects/Attendee__c/fields/Food_Preference__c.field-meta.xml
<CustomField>
    <fullName>Food_Preference__c</fullName>
    <label>Food Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Veg</fullName>
            </value>
            <value>
                <fullName>Veg</fullName>
            </value>
            <value>
                <fullName>Non-Vegetarian</fullName>
                <isActive>false</isActive>
                <label>Non-Vegetarian</label>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
                <isActive>false</isActive>
                <label>Vegetarian</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>