force-app/main/default/objects/Attendee__c/fields/isPrimaryAttendee__c.field-meta.xml
<CustomField>
    <fullName>isPrimaryAttendee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPrimaryAttendee?</label>
    <type>Checkbox</type>
</CustomField>