force-app/main/default/objects/Attendee__c/fields/Linkedin_Id__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Id__c</fullName>
    <label>Linkedin Id</label>
    <type>Url</type>
</CustomField>