force-app/main/default/objects/Attendee__c/fields/Payment_Verified__c.field-meta.xml
<CustomField>
    <fullName>Payment_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Verified?</label>
    <type>Checkbox</type>
</CustomField>