force-app/main/default/objects/Attendee__c/fields/Primary_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Primary_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Attendee</label>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>