force-app/main/default/objects/Attendee__c/fields/Promo_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Promo_Voucher__c</fullName>
    <label>Promo/Voucher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>