force-app/main/default/objects/Attendee__c/fields/Session_Interest__c.field-meta.xml
<CustomField>
    <fullName>Session_Interest__c</fullName>
    <label>Session Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Community Cloud</fullName>
            </value>
            <value>
                <fullName>Analytics Cloud</fullName>
            </value>
            <value>
                <fullName>Health Cloud</fullName>
            </value>
            <value>
                <fullName>Financial Services Cloud</fullName>
            </value>
            <value>
                <fullName>Government Cloud</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Session 1</fullName>
                <isActive>false</isActive>
                <label>Session 1</label>
            </value>
            <value>
                <fullName>Session 2</fullName>
                <isActive>false</isActive>
                <label>Session 2</label>
            </value>
            <value>
                <fullName>Session 3</fullName>
                <isActive>false</isActive>
                <label>Session 3</label>
            </value>
            <value>
                <fullName>Session 4</fullName>
                <isActive>false</isActive>
                <label>Session 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>