force-app/main/default/objects/Attendee__c/fields/Trailblazer_Id__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Id__c</fullName>
    <label>Trailblazer Id</label>
    <type>Url</type>
</CustomField>